--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tailwindcss/cli": "^4.0.3",
     "cra-template": "1.2.0",
     "framer-motion": "^12.0.5",
     "react": "^19.0.0",
