--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@tailwindcss/cli": "^4.0.3",
     "cra-template": "1.2.0",
     "framer-motion": "^12.0.5",
+    "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "tailwindcss": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "overrides": {
+    "tailwindcss": "^4.0.3"
   }
 }
